# livraria2

./: db.sqlite3  pyproject.toml
config/: settings.py
